Ajout des pages dédiées ainsi que traduction de toute la page d accueil possible

--- a/EduCode/assets/static/location.scss
+++ b/EduCode/assets/static/location.scss
@@ -1,9 +1,9 @@
 @import "helpers";
 
-#page-speaker {
+#page-location {
   margin-top: 200px;
 
-  .speaker-description {
+  .location-description {
     font-family: Lato, "Roboto Slab", Roboto, serif;
   }
 }
