--- a/EduCode/assets/static/program.scss
+++ b/EduCode/assets/static/program.scss
@@ -1,9 +1,9 @@
 @import "helpers";
 
-#page-speaker {
+#page-program {
   margin-top: 200px;
 
-  .speaker-description {
+  .program-description {
     font-family: Lato, "Roboto Slab", Roboto, serif;
   }
 }
