--- a/EduCode/assets/static/style.scss
+++ b/EduCode/assets/static/style.scss
@@ -1,8 +1,8 @@
 @import "helpers";
-@import "detailled-program";
+@import "program";
+@import "location";
 @import "speaker";
 @import "home";
-
 
 body {
   background: url('../imgs/bg.jpg') repeat-x top left fixed;
