--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -124,6 +124,15 @@
   cursor: pointer;
   padding: 45px !important;
 
+  &:hover {
+    .speaker-picture {
+      transform: scale(1.2, 1.2);
+    }
+    .speaker-name, .speaker-name a {
+      color: $darker-yellow;
+    }
+  }
+
   .speaker-name {
     font-family:"Unica One", "Roboto Slab", serif;
     font-weight: 600;
@@ -137,9 +146,11 @@
       }
     }
   }
+
   .speaker-picture-container {
     width: 100%;
     text-align: center;
+
 
     .speaker-picture {
       display: inline-block;
@@ -148,22 +159,15 @@
       width: 150px;
       height: 150px;
 
+      background: no-repeat center center;
+      -webkit-background-size: cover;
+      background-size: cover;
+      @include transition("transform ease .4s");
+
       @include responsive(xs) {
         width: 100%;
         height: 80px;
       }
-      
-      background: no-repeat center center;
-      -webkit-background-size: cover;
-      background-size: cover;
-      img {
-        width: 100%;
-        @include transition("transform ease .4s");
-        &:hover {
-          transform: scale(1.2, 1.2);
-        }
-      }
     }
   }
-
 }
