--- a/EduCode/templates/details-program.html
+++ b/EduCode/templates/details-program.html
@@ -1,6 +1,22 @@
 {% extends "layout.html" %}
-{% block name %}{{ this.name }}{% endblock %}
-{% block body %}
-  <h2>{{ this.name }}</h2>
-  {{ this.description }}
+{% block content %}
+    <main id="page-program" class="container">
+        <h1 class="title mb-5 text-center color-darker-yellow"><strong>{{ this.date }}</strong></h1>
+        <div class="row">
+            <div class="col-12 border-dark">
+                <div class="program-description">
+                    <span class="text-dark"><i class="fa fa-comment"></i> Description</span>
+                    <hr>
+                    {{ this.description }}
+                </div>
+                <hr>
+                <p class="text-center">
+                    <a class="btn btn-warning" href="{{ '/' | url }}">
+                        <i class="fa fa-home"></i> Back to home
+                    </a>
+                </p>
+            </div>
+        </div>
+    </main>
 {% endblock %}
+
