--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -17,52 +17,81 @@
     <title>{% block title %}Welcome{% endblock %} — EduCode</title>
 </head>
 <body>
-
 <div class="container-fluid">
     <div class="row d-flex d-md-block flex-nowrap wrapper">
-        <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
-            <div class="position-fixed col-md-2">
-                <div class="text-center brand">
-                    <img src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
-                </div>
-
-                <div class="list-group border-0 card text-center ">
-                    <a href="#program"
-                       class="list-group-item d-inline-block collapsed"
-                       data-toggle="collapse"
-                       aria-expanded="false">Programme</a>
-                    <div class="collapse" id="program">
-                        <a href="#anchor-overview" class="list-group-item">Overview</a>
-                        <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Dimanche 26</a>
-                        <a href="{{ '/lundi-27-aout' | url }}"    class="list-group-item">Lundi 27</a>
-                        <a href="{{ '/mardi-28-aout' | url }}"    class="list-group-item">Mardi 28</a>
-                        <a href="{{ '/mercredi-29-aout' | url }}" class="list-group-item">Mercredi 29</a>
+        <!-- On n'affiche le menu que sur la page d'accueil -->
+        {% set root_url = ['/', '/fr/', '/nl/', '/de/', '/es/', '/en/'] %}
+        {% if this.url_path in root_url %}
+            <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
+                <div class="position-fixed col-md-2">
+                    <div class="text-center brand">
+                        <a href="{{ '/' | url }}">
+                            <img src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
+                        </a>
                     </div>
-                    <a href="#anchor-speakers" class="list-group-item d-inline-block collapsed">Intervenants</a>
-                    <a href="#anchor-expo" class="list-group-item d-inline-block collapsed">Expo</a>
-                    <a href="#anchor-partners" class="list-group-item d-inline-block collapsed">Partenaires</a>
-                    <a href="#anchor-inscription" class="list-group-item d-inline-block collapsed">Inscription</a>
-                    <a href="#anchor-practical-infos" class="list-group-item d-inline-block collapsed">Infos pratiques</a>
-                    <a href="#anchor-press" class="list-group-item d-inline-block collapsed">Presse</a>
-                    <a href="#anchor-contact" class="list-group-item d-inline-block collapsed">Contact</a>
-                    <hr>
-                    <div style="color: black;">
-                        <a style="color: black" href="{{ '/fr' }}">FR</a> |
-                        <a style="color: black" href="{{ '/nl' }}">NL</a> |
-                        <a style="color: black" href="{{ '/es' }}">ES</a> |
-                        <a style="color: black" href="{{ '/de' }}">DE</a> |
-                        <a style="color: black" href="{{ '/' }}">EN</a>
+
+                    <div class="list-group border-0 card text-center ">
+                        <a href="#program"
+                           class="list-group-item d-inline-block collapsed"
+                           data-toggle="collapse"
+                           aria-expanded="false">Schedule</a>
+                        <div class="collapse" id="program">
+                            <a href="#anchor-overview" class="list-group-item">Overview</a>
+                            <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Sunday 26th</a>
+                            <a href="{{ '/lundi-27-aout' | url }}"    class="list-group-item">Monday 27th</a>
+                            <a href="{{ '/mardi-28-aout' | url }}"    class="list-group-item">Thuesday 28th</a>
+                            <a href="{{ '/mercredi-29-aout' | url }}" class="list-group-item">Wednesday 29th</a>
+                        </div>
+                        <a href="#anchor-speakers" class="list-group-item d-inline-block collapsed">Speakers</a>
+                        <a href="#anchor-expo" class="list-group-item d-inline-block collapsed">Expo</a>
+                        <a href="#anchor-partners" class="list-group-item d-inline-block collapsed">Partners</a>
+                        <a href="#anchor-inscription" class="list-group-item d-inline-block collapsed">Registration</a>
+                        <a href="#anchor-practical-infos" class="list-group-item d-inline-block collapsed">Practical infos</a>
+                        <a href="#anchor-press" class="list-group-item d-inline-block collapsed">Press</a>
+                        <a href="#anchor-contact" class="list-group-item d-inline-block collapsed">Contact</a>
+                        <hr>
+                        <div style="color: black;">
+                            <a style="color: black" href="{{ '/fr' }}">FR</a> |
+                            <a style="color: black" href="{{ '/nl' }}">NL</a> |
+                            <a style="color: black" href="{{ '/es' }}">ES</a> |
+                            <a style="color: black" href="{{ '/de' }}">DE</a> |
+                            <a style="color: black" href="{{ '/' }}">EN</a>
+                        </div>
+                        <hr>
+                        &copy; Copyright 2018 by Nicolas Pettiaux.
                     </div>
                 </div>
             </div>
-        </div>
+        {% else %}
+            <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
+                <div class="position-fixed col-md-2">
+                    <div class="text-center brand">
+                        <a href="{{ '/' | url }}">
+                            <img src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
+                        </a>
+                    </div>
+                    <div class="list-group border-0 card text-center ">
+                        <a href="{{ '/' | url }}" class="list-group-item d-inline-block collapsed">
+                            <i class="fa fa-home"></i> Back to home
+                        </a>
+                        <hr>
+                        <div style="color: black;">
+                            <a style="color: black" href="{{ '/fr' }}">FR</a> |
+                            <a style="color: black" href="{{ '/nl' }}">NL</a> |
+                            <a style="color: black" href="{{ '/es' }}">ES</a> |
+                            <a style="color: black" href="{{ '/de' }}">DE</a> |
+                            <a style="color: black" href="{{ '/' }}">EN</a>
+                        </div>
+                        <hr>
+                        &copy; Copyright 2018 by Nicolas Pettiaux.
+                    </div>
+                </div>
+            </div>
+        {% endif %}
         <main class="col-md-10 float-left col p-0 main">
             <a id="menu-icon" href="#" data-target="#sidebar" data-toggle="collapse"><i class="fa fa-navicon d-md-none"></i></a>
             {% block baseline %}{% endblock %}
             {% block content %}{% endblock %}
-            <footer class="height-300">
-                &copy; Copyright 2018 by Nicolas Pettiaux.
-            </footer>
         </main>
     </div>
 </div>
