--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -278,6 +278,18 @@
                 <div>
                     {{ this.practical_infos_brussels }}
                 </div>
+
+                <hr>
+                <div class="row">
+                    <div data-aos="zoom-in" data-aos-delay="100"  class="bxl-img col-12 col-sm-6 col-md-3" style="background-image: url('{{ '/imgs/bxl-1.jpg' | url }}')"></div>
+                    <div data-aos="zoom-in" data-aos-delay="500"  class="bxl-img col-12 col-sm-6 col-md-3" style="background-image: url('{{ '/imgs/bxl-2.jpg' | url }}')"></div>
+                    <div data-aos="zoom-in" data-aos-delay="900"  class="bxl-img col-12 col-sm-6 col-md-3" style="background-image: url('{{ '/imgs/bxl-3.jpg' | url }}')"></div>
+                    <div data-aos="zoom-in" data-aos-delay="1300" class="bxl-img col-12 col-sm-6 col-md-3" style="background-image: url('{{ '/imgs/bxl-4.jpg' | url }}')"></div>
+                    <div class="bxl-img col-12" style="background-image: url('{{ '/imgs/bxl-5.jpg' | url }}');"></div>
+                </div>
+
+                <hr>
+
             </div>
             <div id="anchor-press" class="col-12">
                 <h4 class="title text-center">{ <i class="fa fa-users" aria-hidden="true"></i> {{ this.s_press }} }</h4>
