--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -24,6 +24,35 @@
     }
   }
 
+  .bxl-img {
+    background: no-repeat center center fixed;
+    background-size: cover;
+    height: 350px;
+    border-top: solid $yellow 3px;
+    border-bottom: solid $yellow 3px;
+    margin-top: 20px;
+    &.col-md-3 {
+      background-attachment: scroll !important;
+      @include border-radius("50%");
+      height: 250px;
+      &:nth-of-type(1) {
+        border: solid black 3px;
+      }
+      &:nth-of-type(2) {
+        border: solid $yellow 3px;
+      }
+      &:nth-of-type(3) {
+        border: solid darkred 3px;
+      }
+      &:nth-of-type(4) {
+        border: solid black 3px;
+      }
+
+    }
+  }
+
+
+
   .description {
     background-color: #fff;
 
