--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -345,12 +345,7 @@
   min-height: 200px; }
 
 #anchor-expo {
-  background-color: #eadbb1;
   margin-bottom: 50px; }
-
-#anchor-practical-infos {
-  border-left: solid #e1b12c 3px;
-  border-right: solid #e1b12c 3px; }
 
 #anchor-partners .partner .partner-picture {
   opacity: .33;
@@ -410,9 +405,6 @@
           width: 100%;
           height: 80px; } }
 
-body {
-  background: url("../imgs/bg.jpg") repeat-x top left fixed; }
-
 #sidebar {
   min-height: 100vh;
   overflow: hidden;
@@ -468,6 +460,26 @@ body {
       border-left: solid #e1b12c 10px;
       background-color: #cca228;
       color: white; }
+
+.language {
+  text-align: right;
+  background-color: #446CB3;
+  padding-top: 8px;
+  padding-bottom: 10px; }
+  .language span {
+    margin-right: 10px; }
+  .language .language-link {
+    padding: 10px 15px;
+    color: white; }
+    .language .language-link:hover {
+      text-decoration: none;
+      background-color: #445299; }
+    .language .language-link.current {
+      background-color: #445299;
+      border-bottom: solid #e1b12c 3px; }
+
+.police-normal {
+  font-family: Lato, "Roboto Slab", Serif, serif; }
 
 /* level 1*/
 #sidebar .list-group .collapse .list-group-item,
