--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -20,7 +20,7 @@
 <div class="container-fluid">
     <div class="row d-flex d-md-block flex-nowrap wrapper">
         <!-- On n'affiche le menu que sur la page d'accueil -->
-        {% set root_url = ['/', '/fr/', '/nl/', '/de/', '/es/', '/en/'] %}
+        {% set root_url = ['', '/', '/fr/', '/en/', '/nl/', '/es/', '/de/'] %}
         {% if this.url_path in root_url %}
             <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
                 <div class="position-fixed col-md-2">
@@ -35,6 +35,7 @@
                            class="list-group-item d-inline-block collapsed"
                            data-toggle="collapse"
                            aria-expanded="false">Schedule</a>
+
                         <div class="collapse" id="program">
                             <a href="#anchor-overview" class="list-group-item">Overview</a>
                             <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Sunday 26th</a>
@@ -50,14 +51,6 @@
                         <a href="#anchor-press" class="list-group-item d-inline-block collapsed">Press</a>
                         <a href="#anchor-contact" class="list-group-item d-inline-block collapsed">Contact</a>
                         <hr>
-                        <div style="color: black;">
-                            <a style="color: black" href="{{ '/' }}">FR</a> |
-                            <a style="color: black" href="{{ '/nl' }}">NL</a> |
-                            <a style="color: black" href="{{ '/es' }}">ES</a> |
-                            <a style="color: black" href="{{ '/de' }}">DE</a> |
-                            <a style="color: black" href="{{ '/en' }}">EN</a>
-                        </div>
-                        <hr>
                         &copy; Copyright 2018 by Nicolas Pettiaux.
                     </div>
                 </div>
@@ -71,27 +64,61 @@
                         </a>
                     </div>
                     <div class="list-group border-0 card text-center ">
-                        <a href="{{ '/' | url }}" class="list-group-item d-inline-block collapsed">
-                            <i class="fa fa-home"></i> Back to home
-                        </a>
-                        <hr>
-                        <div style="color: black;">
-                            <a style="color: black" href="{{ '/' }}">FR</a> |
-                            <a style="color: black" href="{{ '/nl' }}">NL</a> |
-                            <a style="color: black" href="{{ '/es' }}">ES</a> |
-                            <a style="color: black" href="{{ '/de' }}">DE</a> |
-                            <a style="color: black" href="{{ '/en' }}">EN</a>
+                        <a href="#program"
+                           class="list-group-item d-inline-block collapsed"
+                           data-toggle="collapse"
+                           aria-expanded="false">Schedule</a>
+                        <div class="collapse" id="program">
+                            <a href="{{ '#anchor-overview' }}" class="list-group-item">Overview</a>
+                            <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Sunday 26th</a>
+                            <a href="{{ '/lundi-27-aout' | url }}"    class="list-group-item">Monday 27th</a>
+                            <a href="{{ '/mardi-28-aout' | url }}"    class="list-group-item">Thuesday 28th</a>
+                            <a href="{{ '/mercredi-29-aout' | url }}" class="list-group-item">Wednesday 29th</a>
                         </div>
+                        <a href="{{ '/#anchor-speakers'        }}" class="list-group-item d-inline-block collapsed">Speakers</a>
+                        <a href="{{ '/#anchor-expo'            }}" class="list-group-item d-inline-block collapsed">Expo</a>
+                        <a href="{{ '/#anchor-partners'        }}" class="list-group-item d-inline-block collapsed">Partners</a>
+                        <a href="{{ '/#anchor-inscription'     }}" class="list-group-item d-inline-block collapsed">Registration</a>
+                        <a href="{{ '/#anchor-practical-infos' }}" class="list-group-item d-inline-block collapsed">Practical infos</a>
+                        <a href="{{ '/#anchor-press'           }}" class="list-group-item d-inline-block collapsed">Press</a>
+                        <a href="{{ '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">Contact</a>
                         <hr>
+
                         &copy; Copyright 2018 by Nicolas Pettiaux.
                     </div>
                 </div>
             </div>
         {% endif %}
         <main class="col-md-10 float-left col p-0 main">
-            <a id="menu-icon" href="#" data-target="#sidebar" data-toggle="collapse"><i class="fa fa-navicon d-md-none"></i></a>
-            {% block baseline %}{% endblock %}
-            {% block content %}{% endblock %}
+            <div class="container-fluid">
+                <div class="language row">
+                    <div class="col-12">
+                        <span class="text-white">Langue</span>
+
+                        <a class="language-link {% if this.url_path == '/'  %} {{ 'current' }} {% endif %}" href="{{ '/' }}">
+                            <img width="16px" height="16px" src="{{ '/imgs/fr.png' | url }}" alt=""> FR
+                        </a>
+                        <a class="language-link {% if this.url_path == '/nl/'  %} {{ 'current' }} {% endif %}" href="{{ '/nl' }}">
+                            <img width="16px" height="16px" src="{{ '/imgs/nl.png' | url }}" alt=""> NL
+                        </a>
+                        <a class="language-link {% if this.url_path == '/en/'  %} {{ 'current' }} {% endif %}" href="{{ '/en' }}">
+                            <img width="16px" height="16px" src="{{ '/imgs/gb.png' | url }}" alt=""> EN
+                        </a>
+                        <a class="language-link {% if this.url_path == '/de/'  %} {{ 'current' }} {% endif %}" href="{{ '/de' }}">
+                            <img width="16px" height="16px" src="{{ '/imgs/de.png' | url }}" alt=""> DE
+                        </a>
+                        <a class="language-link {% if this.url_path == '/es/'  %} {{ 'current' }} {% endif %}" href="{{ '/es' }}">
+                            <img width="16px" height="16px" src="{{ '/imgs/es.png' | url }}" alt=""> ES
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div style="background: url('{{ '/imgs/bg.jpg' | url }}') repeat-x top left fixed;">
+                {% block baseline %}{% endblock %}
+                {% block content %}{% endblock %}
+            </div>
+
         </main>
     </div>
 </div>
@@ -109,6 +136,10 @@
     }
 
     $(function () {
+
+        if ($("#landing-page-content").length > 0)
+            window.history.pushState("object or string", "Welcome - EduCode", "/");
+
         var $root = $('html, body');
 
         $(document).on('click', 'a[href^="#anchor"]', function () {
