--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -5,14 +5,14 @@
         <img data-aos="zoom-in" data-aos-delay="500" src="{{ '/imgs/educode-logo-transparent.png' | url }}" alt="">
         <h1 data-aos="fade-down" data-aos-delay="100" class="color-dark">{{ this.title }}</h1>
 
-        <p class="color-darker-yellow ">
+        <p class="color-darker-yellow " data-aos="zoom-in" data-aos-delay="300">
             <strong>
                 {{ this.s_intro_location_city }}
                 <br>
                 {{ this.s_intro_dates }}
             </strong>
         </p>
-        <p>
+        <p data-aos="zoom-in" data-aos-delay="600">
             <strong>
                 {{ this.s_intro_location_institutions }}
                 <br>
